added scroll top and scroll left and scroll right

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -1110,7 +1110,9 @@
 				<p><a href="https://themeforest.net/user/like-themes">Bridal Arts</a> © All Rights Reserved - 2019</p>
 			</div>
 		</footer>
-	</div> <a href="#" class="ltx-go-top floating ltx-go-top-img"><span class="go-top-icon"></span></a>
+	</div> <a href="#" class="ltx-go-top floating ltx-go-top-img"><span class="go-top-icon">
+			<i class="fa fa-arrow-up fa-2x"></i>
+		</span></a>
 
 	<link href="https://fonts.googleapis.com/css?family=Prata:400%7CUbuntu:400%7CRoboto:400%2C500%7COpen+Sans:400"
 		rel="stylesheet" property="stylesheet" media="all" type="text/css">
